vlib/v/checker/tests/return_missing_match_if.out
vlib/v/checker/tests/return_missing_match_if.vv:5:3: notice: match is always true
    3 | fn foo() string {
    4 |     match 1 {
    5 |         1 {
      |         ^
    6 |             return ''
    7 |         }
vlib/v/checker/tests/return_missing_match_if.vv:8:3: notice: match is always false
    6 |             return ''
    7 |         }
    8 |         2 {
      |         ^
    9 |             if true {
   10 |             } else {
vlib/v/checker/tests/return_missing_match_if.vv:9:7: notice: condition is always true
    7 |         }
    8 |         2 {
    9 |             if true {
      |                ~~~~
   10 |             } else {
   11 |                 return ''
vlib/v/checker/tests/return_missing_match_if.vv:3:1: error: missing return at end of function `foo`
    1 | fn main() {}
    2 | 
    3 | fn foo() string {
      | ~~~~~~~~~~~~~~~
    4 |     match 1 {
    5 |         1 {
